--- a/style.css
+++ b/style.css
@@ -1,18 +1,86 @@
-*{
-    padding: 0;
-    margin:0;
-    box-sizing:border-box;
 
-}
-body{
-    font-family: 'Barlow', sans-serif;
-}
-.wrapper{
-    width: 100vw;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  .body {
+    font-family: "Barlow Condensed", sans-serif;
+  }
+  .wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 100vh;
     height: 100vh;
     background: radial-gradient(
-      134.34% 134.34% at 50% 0% ,
-        #1f3757 0% ,
-        #131537 100%
+      134.34% 134.34% at 50% 0%,
+      #1f3757 0%,
+      #131537 100%
     );
-}
+
+  }
+  .scoreboard{
+    width: 700px;
+    height: 150px;
+    border: 1px solid white;
+    border-radius:15px;
+    margin-top: 50px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+
+  }
+  .title{
+    margin-left: 30px;
+  }
+  .score{
+    width: 150px;
+    height:114px;
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 8px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+
+  }
+  .score h1{
+    color:#565468;
+    font-size: 56px;
+  }
+  .score p{
+    color: #2a45c2;
+    font-size: 16px;
+    font-weight: 600px;
+    line-height: 19px;
+    letter-spacing: 2.5px;
+
+
+  }
+  .hands{
+    background-image: url(image/triangle.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 470px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  .paper{
+    margin-right:20px;
+  }
+ .scissors{
+   margin-left:20px;
+ }
+ .hovers.hand{
+   cursor:center;
+ }
+ .hovers.hand:hover{
+   transform: ;
+ }
